[tool.poetry]
name = "ent"
version = "0.1.0"
description = "fight your todo lists as a forest"
authors = ["Chris Addy <chris.william.addy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
taskw = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
